fix: h1 text alignment

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   }
   
   h1 {
+    text-align: center;
     margin-top: 0;
   }
   
